# Tour_SaaS

./: AI_PACKAGE_SEARCH_FLOW.md  AI_Trip_Assistant_Prompts.md  API_Documentation.md  Amadeus Request.txt  Customer_notification.txt  Design File.txt  Design.text  Destructive QA Testing Report (Antigravity Tests) walkthrough  SRS.md  TECHNICAL_DOCUMENTATION.md  Tripjack revirw, booking request.txt  add_razorpay_columns.sql  agents_dump.txt  ai_assistant_plan.md  ai_search_feature_prompt.html  bug_list.md  cancellation implementation_plan  check_db_schema.py  check_db_trust.py  cloudflared-config.yaml  db_output.txt  debug_check_data.py  debug_s3.py  debug_search_india.py  debug_tripjack_v3.py  diag_output.txt  diff.txt  docker-compose.yml  dump_booking.py  enhanced_tour_saas_specs.md  fix_constraints.py  fix_data_integrity.py  fix_data_integrity_robust.py  fix_hosts.bat  git_status.txt  implementation_plan cancellation  implementation_plan for otp command  implementation_plan.md  inspect_constraints.py  log.txt  (+20 more)
backend/: .env.example  .gitignore  BACKEND_PLAN.md  Dockerfile  FRONTEND_PLAN.md  POSTGRESQL_SETUP.txt  README.md  Tour_SaaS_API.postman_collection.json  WALKTHROUGH.md  add_flight_columns.py  add_flight_columns_to_bookings.py  add_homepage_settings_column.py  add_package_gst.py  add_sub.py  add_traveler_type.py  add_tripjack_column.py  admin_check.txt  api_endpoints.csv  apply_enhanced_migration.py  booking_data.txt  check_admins.py  check_agent.py  check_agent_context.py  check_agent_domain.py  check_agent_domains.py  check_agent_logs.py  check_agents.py  (+254 more)
(+413 files in other folders)
